@@ -8,6 +8,7 @@ project(*idl): taoidldefaults, valuetype {
   idlflags += -as
   IDL_Files {
     Test.idl
+    Test2.idl
   }
   custom_only = 1
 }
@@ -20,6 +21,8 @@ project(*Server): taoserver, valuetype {
     server.cpp
     TestC.cpp
     TestS.cpp
+    Test2C.cpp
+    Test2S.cpp
   }
   IDL_Files {
   }
@@ -30,6 +33,7 @@ project(*Client): taoclient, valuetype, typecodefactory {
 
   Source_Files {
     TestC.cpp
+    Test2C.cpp
     client.cpp
   }
   IDL_Files {
